RESOLVED FIXED91078
InspectorFileSystemAgent.cpp have to include File.h explicitly.
https://bugs.webkit.org/show_bug.cgi?id=91078
Summary InspectorFileSystemAgent.cpp have to include File.h explicitly.
Dongwoo Joshua Im (dwim)
Reported 2012-07-12 05:37:24 PDT
When I've tried to build with two options - ENABLE_INSPECTOR and ENABLE_FILE_SYSTEM, I have a build break. Source/WebCore/inspector/InspectorFileSystemAgent.cpp:524:29: error: invalid use of incomplete type ‘struct WebCore::File’ This could be solve by including the File.h. So, IMO, InspectorFileSystemAgent.cpp have to include File.h explicitly.
Attachments
Patch (1.18 KB, patch)
2012-07-12 05:41 PDT, Dongwoo Joshua Im (dwim)
no flags
Dongwoo Joshua Im (dwim)
Comment 1 2012-07-12 05:41:42 PDT
WebKit Review Bot
Comment 2 2012-07-12 08:01:57 PDT
Comment on attachment 151922 [details] Patch Clearing flags on attachment: 151922 Committed r122459: <http://trac.webkit.org/changeset/122459>
WebKit Review Bot
Comment 3 2012-07-12 08:02:02 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.