Source/WebCore/inspector/InspectorFileSystemAgent.cpp
@@ -44,6 +44,7 @@
 #include "EntryArray.h"
 #include "EntryCallback.h"
 #include "ErrorCallback.h"
+#include "File.h"
 #include "FileCallback.h"
 #include "FileEntry.h"
 #include "FileError.h"
